// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build .each({"types":["ekuaibao","lint","jest"],"name":"demo-demo-4","output":"./demo"}) show be types: ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-4",
    "output": "./demo",
    "types": Array [
      "common",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-4",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel src --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel src --out-dir dist/lib",
        "build": "npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib && npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo/demo-demo-4",
}
`;

exports[`build .each({"types":["ts","ekuaibao","lint","jest"],"name":"demo-demo-3","output":"./demo"}) show be types: ts,ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-3",
    "output": "./demo",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-3",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo/demo-demo-3",
}
`;

exports[`build .each({"types":["ts","ekuaibao","lint"],"name":"demo-demo-2","output":"./demo"}) show be types: ts,ekuaibao,lint 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-2",
    "output": "./demo",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "babel-eslint": "^10.0.1",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-2",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo/demo-demo-2",
}
`;

exports[`build .each({"types":["ts","ekuaibao"],"name":"demo-demo-1","output":"./demo"}) show be types: ts,ekuaibao 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-1",
    "output": "./demo",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-1",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo/demo-demo-1",
}
`;

exports[`build .each({"types":["ts"],"name":"demo-demo-0","output":"./demo"}) show be types: ts 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-0",
    "output": "./demo",
    "types": Array [
      "common",
      "ts",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-0",
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo/demo-demo-0",
}
`;

exports[`build none name & output .each({"types":["ekuaibao","lint","jest"]}) show be types: ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "types": Array [
      "common",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel src --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel src --out-dir dist/lib",
        "build": "npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib && npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen",
}
`;

exports[`build none name & output .each({"types":["ts","ekuaibao","lint","jest"]}) show be types: ts,ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen",
}
`;

exports[`build none name & output .each({"types":["ts","ekuaibao","lint"]}) show be types: ts,ekuaibao,lint 1`] = `
Object {
  "config": Object {
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "babel-eslint": "^10.0.1",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen",
}
`;

exports[`build none name & output .each({"types":["ts","ekuaibao"]}) show be types: ts,ekuaibao 1`] = `
Object {
  "config": Object {
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen",
}
`;

exports[`build none name & output .each({"types":["ts"]}) show be types: ts 1`] = `
Object {
  "config": Object {
    "types": Array [
      "common",
      "ts",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen",
}
`;

exports[`build none name .each({"types":["ekuaibao","lint","jest"],"output":"demo_demo-4"}) show be types: ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "output": "demo_demo-4",
    "types": Array [
      "common",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel src --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel src --out-dir dist/lib",
        "build": "npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib && npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo_demo-4",
}
`;

exports[`build none name .each({"types":["ts","ekuaibao","lint","jest"],"output":"demo_demo-3"}) show be types: ts,ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "output": "demo_demo-3",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo_demo-3",
}
`;

exports[`build none name .each({"types":["ts","ekuaibao","lint"],"output":"demo_demo-2"}) show be types: ts,ekuaibao,lint 1`] = `
Object {
  "config": Object {
    "output": "demo_demo-2",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "babel-eslint": "^10.0.1",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo_demo-2",
}
`;

exports[`build none name .each({"types":["ts","ekuaibao"],"output":"demo_demo-1"}) show be types: ts,ekuaibao 1`] = `
Object {
  "config": Object {
    "output": "demo_demo-1",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo_demo-1",
}
`;

exports[`build none name .each({"types":["ts"],"output":"./demo_demo_0"}) show be types: ts 1`] = `
Object {
  "config": Object {
    "output": "./demo_demo_0",
    "types": Array [
      "common",
      "ts",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": undefined,
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo_demo_0",
}
`;

exports[`build none output .each({"types":["ekuaibao","lint","jest"],"name":"demo-demo-4"}) show be types: ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-4",
    "types": Array [
      "common",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-4",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel src --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel src --out-dir dist/lib",
        "build": "npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib && npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo-demo-4",
}
`;

exports[`build none output .each({"types":["ts","ekuaibao","lint","jest"],"name":"demo-demo-3"}) show be types: ts,ekuaibao,lint,jest 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-3",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
      "jest",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/jest/jest.config.js",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "@types/jest": "^24",
        "babel-eslint": "^10.0.1",
        "babel-jest": "^24",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "jest": "^24",
        "prettier": "^1.16.4",
        "ts-jest": "^24",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-3",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "test": "jest --coverage",
        "test:watch": "jest -o --watch",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo-demo-3",
}
`;

exports[`build none output .each({"types":["ts","ekuaibao","lint"],"name":"demo-demo-2"}) show be types: ts,ekuaibao,lint 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-2",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
      "lint",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/.eslintrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/lint/tslint.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "babel-eslint": "^10.0.1",
        "eslint": "^5.14.1",
        "eslint-config-prettier": "^4.0.0",
        "eslint-plugin-prettier": "^3.0.1",
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "tslint": "^5.12.1",
        "tslint-config-prettier": "^1.18.0",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-2",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "lint:es": "eslint --ext .jsx,.js src",
        "lint:ts": "tslint -p tsconfig.json",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo-demo-2",
}
`;

exports[`build none output .each({"types":["ts","ekuaibao"],"name":"demo-demo-1"}) show be types: ts,ekuaibao 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-1",
    "types": Array [
      "common",
      "ts",
      "ekuaibao",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ekuaibao/.gitlab-ci.yml",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-1",
      "publishConfig": Object {
        "registry": "https://repo.ekuaibao.com/repository/ekuaibao-npm/",
      },
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo-demo-1",
}
`;

exports[`build none output .each({"types":["ts"],"name":"demo-demo-0"}) show be types: ts 1`] = `
Object {
  "config": Object {
    "name": "demo-demo-0",
    "types": Array [
      "common",
      "ts",
    ],
  },
  "files": Array [
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.babelrc.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.gitignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.npmignore.raw",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/.prettierrc",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/README.md",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/common/LICENSE",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.esm.json",
    "/Users/nanyuantingfeng/Repositories/github/yygen/templates/ts/tsconfig.json",
  ],
  "filesObject": Object {
    "package.json": Object {
      "dependencies": Object {
        "reflect-metadata": "^0",
        "tslib": "^1",
      },
      "description": "this is an yygen template paoject!!",
      "devDependencies": Object {
        "hollow-cli": "^1",
        "prettier": "^1.16.4",
        "typescript": "^3",
      },
      "license": "MIT",
      "main": "./lib/index.js",
      "module": "./esm/index.js",
      "name": "demo-demo-0",
      "resolutions": Object {
        "babel-core": "^7.0.0-bridge.0",
      },
      "scripts": Object {
        "babel:esm": "BABEL_ENV=esm babel dist/esm --out-dir dist/esm",
        "babel:lib": "BABEL_ENV=lib babel dist/lib --out-dir dist/lib",
        "build": "npm run tsc && npm run optimize && npm run copy",
        "copy": "cp package.json README.md .npmignore dist",
        "optimize": "npm run babel:lib & npm run babel:esm",
        "publish2npm": "npm run build && npm publish dist",
        "tsc": "rm -rf dist && tsc -p tsconfig.esm.json && cp -R dist/esm dist/lib",
      },
      "sideEffects": false,
      "types": "./esm/index.d.ts",
      "version": "1.0.0-beta.0",
    },
  },
  "output": "/Users/nanyuantingfeng/Repositories/github/yygen/demo-demo-0",
}
`;
